--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "angular-router-loader": "^0.4.0",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^2.2.1",
+    "bootstrap": "^3.3.7",
     "codelyzer": "~1.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.26.0",
@@ -98,6 +99,7 @@
     "file-loader": "^0.9.0",
     "gh-pages": "^0.12.0",
     "html-webpack-plugin": "^2.21.0",
+    "image-webpack-loader": "^3.1.0",
     "imports-loader": "^0.6.5",
     "istanbul-instrumenter-loader": "0.2.0",
     "json-loader": "^0.5.4",
