--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.12.0",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.21.0",
     "image-webpack-loader": "^3.1.0",
     "imports-loader": "^0.6.5",
