--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "rxjs": "5.0.0-beta.12",
+    "web-animations-js": "^2.2.2",
     "zone.js": "~0.6.26"
   },
   "devDependencies": {
