--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "homepage": "https://github.com/angularclass/angular2-webpack-starter",
   "license": "MIT",
   "scripts": {
-    "build:dev": "webpack --colors --config config/webpack.dev.js --progress --profile",
+    "build:dev": "webpack --display-modules --colors --config config/webpack.dev.js --progress --profile",
     "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
-    "build:prod": "webpack --colors --config config/webpack.prod.js  --progress --profile --bail",
+    "build:prod": "webpack --display-modules --colors --config config/webpack.prod.js  --progress --profile --bail",
     "build": "npm run build:dev",
     "ci": "npm run lint && npm test && npm run e2e",
     "clean:dist": "npm run rimraf -- dist",
