--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/uglify-js": "^2.0.27",
     "@types/webpack": "^1.12.34",
     "angular-router-loader": "^0.4.0",
+    "angular2-load-children-loader": "^0.1.3",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^2.2.4",
     "bootstrap": "^3.3.7",
