--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "codelyzer": "~1.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.26.0",
+    "es6-promise-loader": "^1.0.2",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
