--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "zone.js": "~0.6.26"
   },
   "devDependencies": {
+    "@angularclass/webpack-toolkit": "^1.3.3",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
     "@types/node": "^6.0.38",
