--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "intl": "^1.2.5",
     "rxjs": "5.0.0-beta.12",
     "web-animations-js": "^2.2.2",
     "zone.js": "~0.6.26"
@@ -94,7 +95,6 @@
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^2.2.4",
     "bootstrap": "^3.3.7",
-    "chunk-manifest-webpack-plugin": "^1.0.0",
     "codelyzer": "~1.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.26.0",
@@ -134,7 +134,7 @@
     "typescript": "2.1.1",
     "url-loader": "^0.5.7",
     "v8-lazy-parse-webpack-plugin": "^0.3.0",
-    "webpack": "2.1.0-beta.27",
+    "webpack": "2.1.0-beta.26",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "2.1.0-beta.11",
     "webpack-manifest-plugin": "^1.1.0",
