--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "ie-shim": "^0.1.0",
     "intl": "^1.2.5",
     "rxjs": "5.0.0-beta.12",
+    "script-loader": "^0.7.0",
     "web-animations-js": "^2.2.2",
     "zone.js": "~0.6.26"
   },
