--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "file-loader": "^0.9.0",
     "gh-pages": "^0.12.0",
     "html-loader": "^0.4.4",
+    "html-webpack-inline-source-plugin": "0.0.6",
     "html-webpack-plugin": "^2.21.0",
     "image-webpack-loader": "^3.1.0",
     "imports-loader": "^0.6.5",
