--- a/package.json
+++ b/package.json
@@ -120,6 +120,8 @@
     "karma-remap-coverage": "^0.1.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.0",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "parse5": "^2.2.2",
     "protractor": "^4.0.10",
     "raw-loader": "0.5.1",
