--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "intl": "^1.2.5",
+    "jquery": "^3.1.1",
     "rxjs": "5.0.0-beta.12",
     "script-loader": "^0.7.0",
     "web-animations-js": "^2.2.2",
@@ -87,6 +88,7 @@
     "@angularclass/webpack-toolkit": "^1.3.3",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
+    "@types/jquery": "^2.0.39",
     "@types/node": "^6.0.38",
     "@types/selenium-webdriver": "2.53.33",
     "@types/source-map": "^0.1.27",
