--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "zone.js": "~0.7.4"
   },
   "devDependencies": {
-    "@angularclass/webpack-toolkit": "^1.3.3",
     "@angular/compiler-cli": "~2.4.1",
+    "@angularclass/webpack-toolkit": "^1.3.3",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
     "@types/jquery": "^2.0.39",
@@ -116,6 +116,7 @@
     "es6-promise-loader": "^1.0.2",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.12.0",
     "html-loader": "^0.4.4",
