--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "es6-promise-loader": "^1.0.2",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.12.0",
     "html-loader": "^0.4.4",
@@ -140,6 +140,7 @@
     "ngc-webpack": "^1.0.2",
     "npm-run-all": "^4.0.0",
     "parse5": "^3.0.1",
+    "postcss-loader": "^1.2.2",
     "protractor": "^4.0.10",
     "raw-loader": "0.5.1",
     "rimraf": "~2.5.4",
